<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">护眼小助手</string>
    <string name="title_activity_activity__se_mang">色盲测试</string>
    <string name="yanbaojiancao_top">眼保健操</string>
    <string name="yanbaojiancao1">北京版新眼保健操图解：</string>
    <string name="yanbaojiancaostep1">"第一节：按揉攒竹穴
用双手大拇指螺纹面分别按在两侧穴位上，其余手指自然放松，指尖抵在前额上。有节奏的按揉穴位；"</string>
    <string name="yanbaojiancaostep2">"第二节：按压晴明穴
用双手食指纹面分别按在两侧穴位上，其余手指自然放松，握起，呈空心拳状。有节奏地上下按压穴位；"</string>
    <string name="yanbaojiancaostep3">"第三节：按揉四白穴
用双手食指纹面分别按在两侧穴位上，大拇指抵在下颌凹陷处，其余手指自然放松，握起，呈空心拳状。有节奏地上下按揉穴位；"</string>
    <string name="yanbaojiancaostep4">"第四节：按揉太阳穴，刮上眼眶
用双手大拇指螺纹面分别按在两侧太阳穴上，其余手指自然放松，弯曲。先用大拇指按揉太阳穴，每次一圈，揉四圈。然后，大拇指不动，用双手食指的第二个关节内侧，稍加用力从眉头刮至眉梢。连刮两次，如此交替；"</string>
    <string name="yanbaojiancaostep5">"第五节：按揉风池穴
用双手食指和中指的螺纹面分别按在两侧穴位上，其余三指自然放松，有节奏地来回按揉穴位；"</string>
    <string name="yanbaojiancaostep6">"第六节：揉捏耳垂，脚趾抓地
用双手大拇指和食指的螺纹面捏住耳垂正中的眼穴，其余三指自然并拢弯曲。用大拇指和食指有节奏地揉捏穴位，同时用双脚全部脚趾做抓地运动；"</string>
    <string name="text_yanbao_yinyue">"马上进行眼保健操：
点击右边的播放按钮开始进行(三分钟)"</string>
    <string name="about_text">"    现在的上班族、学生族经常需要长时间面对电脑，眼睛视力不经意间就容易下降。使用本应用,可以随时随地对自己的视力进行动态检测，了解自己的视力变化情况做出真确的视力矫正！
检测眼睛：
    1，提供了科学专业的手机检测办法，从视力到色觉（色盲）检测，简单速度手持测试！
    2，配搭了眼保健操的图文介绍和广播音乐，每天坚持做一次，让视力保持健康！
    3，还有更珍贵的夜间模式,方便夜间看新闻看小说,不伤眼!"</string>
    <string name="baojiantu_shuoming">"    视力保健图，具有视力保健作用，可以用于正视眼的预防保健，也可以用于近视的配合治疗。每日坚持视图数次可以达到缓解视疲劳，提高视力之功效。
使用说明：
 1、该图平贴于光线充足的墙面上，中心点与眼等高。
 2、裸视距离20-45厘米（以清楚为宜），每日视图数次，每次三分钟。
 3、眼平视中心点，想象中心向远处延伸，稍后保健图会呈立体效果，如此反复进行。
 4、长期坚持并配合做锐目视力保健操，对缓解睫状肌痉挛、消除眼疲劳、提高视力有良好的功效。"</string>
    <string name="eyesskill_step1">1.调整好工作位置</string>
    <string name="eyesskill_step1_1">　　人的视线与向地心垂线的夹角为115°时,颈部肌肉最放松.所以,电脑显示器和座椅的相对高度要调整好.如果没有条件更换专门的电脑桌,可以试着将座椅垫高,直到颈部感到放松为止.座椅最好有支持性椅背及扶手.并能调整高度.</string>
    <string name="eyesskill_step2">2.保持正确的操作姿势.</string>
	<string name="eyesskill_step2_1">　　保持颈部直立,是头部获得支撑,两肩自然下垂,上臂贴近身体,手肘弯曲呈90°.
    用键盘或鼠标时,应尽量使手腕放松,保持水平姿势,手掌中线与前臂中线保持一直线.
    腰部要挺直,膝盖自然弯曲呈90°,并维持双脚着地的坐姿.</string>
    <string name="eyesskill_step3">3.做颈部锻炼工间操.每工作两小时左右做一次</string>
    <string name="eyesskill_step3_1">　看天看地</string>
    <string name="eyesskill_step3_1_1">  看天时,头后仰到极限;看地时,下颌尽力贴近胸部.重复10次.</string>
    <string name="eyesskill_step3_2">　看左看右</string>
    <string name="eyesskill_step3_2_1">　　头向左或右缓慢地旋转,看肩背到最大限度(用力不要过猛).连续做10次.</string>
    <string name="eyesskill_step3_3">　左右侧屈</string>
    <string name="eyesskill_step3_3_1">　　从左到右缓慢侧屈,耳朵靠近肩膀,身体与肩膀尽量保持不动.左右重复10次.</string>
    <string name="eyesskill_step3_4">　逆时画圈</string>
    <string name="eyesskill_step3_4_1">　　头从右向左做画圈动作,每一组动作都做到极限,尽量把颈部肌肉拉直,重复10次.</string>
</resources>