<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:orientation="vertical" 
    android:background="@drawable/background" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">
        <Button 
            android:id="@+id/button_eyesskill_back" 
            android:background="@drawable/btn_back" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginLeft="20.0dip" 
            android:layout_centerVertical="true" />
        <TextView 
            android:textSize="20.0sp" 
            android:textColor="@color/text_top" 
            android:id="@id/text_top_top" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="护眼小技巧" 
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content">
        <ScrollView 
            android:id="@id/scrollView1" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            <LinearLayout 
                android:orientation="vertical" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content">

                <TextView 
                    android:textSize="20.0sp" 
                    android:textColor="@color/text_jp" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step1" />
                <TextView 
                    android:textSize="16.0sp" 
                    android:textColor="@color/text_top" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step1_1" />
                <ImageView 
                    android:layout_gravity="center_horizontal" 
                    android:background="@drawable/eyesskill_step1" 
                    android:layout_width="200dip" 
                    android:layout_height="200dip" 
                    android:layout_marginTop="10.0dip" />
                <TextView 
                    android:textSize="20.0sp" 
                    android:textColor="@color/text_jp" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step2" />
                <TextView 
                    android:textSize="16.0sp" 
                    android:textColor="@color/text_top" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step2_1" />
                <TextView 
                    android:textSize="20.0sp" 
                    android:textColor="@color/text_jp" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3" />
                <TextView 
                    android:textSize="18.0sp" 
                    android:textColor="@color/purple" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_1" />
                <TextView 
                    android:textSize="16.0sp" 
                    android:textColor="@color/text_top" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_1_1" />
                <ImageView 
                    android:layout_gravity="center_horizontal" 
                    android:background="@drawable/eyesskill_step3_1" 
                    android:layout_width="150dip" 
                    android:layout_height="200dip" 
                    android:layout_marginTop="10.0dip" />
                <TextView 
                    android:textSize="18.0sp" 
                    android:textColor="@color/purple" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_2" />
                <TextView 
                    android:textSize="16.0sp" 
                    android:textColor="@color/text_top" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_2_1" />
                <ImageView 
                    android:layout_gravity="center_horizontal" 
                    android:background="@drawable/eyesskill_step3_2" 
                    android:layout_width="150dip" 
                    android:layout_height="200dip" 
                    android:layout_marginTop="10.0dip" />
                <TextView 
                    android:textSize="18.0sp" 
                    android:textColor="@color/purple" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_3" />
                <TextView 
                    android:textSize="16.0sp" 
                    android:textColor="@color/text_top" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_3_1" />
                <ImageView 
                    android:layout_gravity="center_horizontal" 
                    android:background="@drawable/eyesskill_step3_3" 
                    android:layout_width="150dip" 
                    android:layout_height="200dip" 
                    android:layout_marginTop="10.0dip" />
                <TextView 
                    android:textSize="18.0sp" 
                    android:textColor="@color/purple" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_4" />
                <TextView 
                    android:textSize="16.0sp" 
                    android:textColor="@color/text_top" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginLeft="10.0dip" 
                    android:layout_marginTop="10.0dip" 
                    android:layout_marginRight="10.0dip"
                    android:text="@string/eyesskill_step3_4_1" />
                <ImageView 
                    android:layout_gravity="center_horizontal" 
                    android:background="@drawable/eyesskill_step3_4" 
                    android:layout_width="150dip" 
                    android:layout_height="200dip" 
                    android:layout_marginTop="10.0dip" />
                <RelativeLayout 
                    android:layout_gravity="center_horizontal" 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content" 
                    android:layout_marginTop="10.0dip" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
